--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Check project structure
       run: |
         echo "📁 Project structure:"
-        tree
+        ls -lah
         find . -name "build.gradle" -type f | head -20
         echo ""
         echo "📊 Gradle projects:"
