--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,6 +97,12 @@ jobs:
           echo "❌ Cannot build - gradlew not found"
           exit 1
         fi
+    - name: Cache Gradle packages
+      uses: actions/cache@v4
+      with:
+        path: |
+          **/.gradle/caches
+          **/.gradle/wrapper    
         
     - name: ⏳ Wait for services to be ready
       run: |
@@ -153,7 +159,7 @@ jobs:
           **/build/reports/allure-report/
           **/build/allure-results/
         retention-days: 30
-        
+      
     - name: 📋 Upload Build Artifacts
       if: always()
       uses: actions/upload-artifact@v4
