--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,11 @@ jobs:
         ports:
           - 5434:5432
     steps:
+      - name: Allure Action
+        # You may pin to the exact commit or the version.
+        # uses: piotrek111/install-allure-for-linux@bd836fdc78f64714a2b07cabcadfd479070b0846
+        uses: piotrek111/install-allure-for-linux@v1.0.0
+          
       - name: Setup Java JDK
         uses: actions/setup-java@v5.0.0
         with:
