--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Install Allure
         run: |
           # Добавляем официальный репозиторий Allure
+          sudo apt-get install -y default-jre-headless
           wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure_2.27.0-1_all.deb
           sudo dpkg -i allure_2.27.0-1_all.deb
           sudo apt-get install -f
